--- a/trunk/README
+++ b/trunk/README
@@ -36,15 +36,13 @@ code is partially based on ANSYS version 14.5 (completions, help
 strings etc.).  Besides the code and Emacs you will find also in the
 download section two tutorials.  For an immediate access have a look
 at the
-[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys-mode_tutorial.html
-introductory on-line version], here you are able to see the images in
+[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_introductory_tutorial.html introductory on-line version], here you are able to see the images in
 a higher resolution as in the PDF version.  And in the
-[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/APDL_tutorial.html
-in-depth on-line tutorial] there is the source code highlighting
+[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_in-depth_tutorial.html in-depth on-line tutorial] there is the source code highlighting
 better preserved as in its PDF version.
 
 Please report bugs and inconsistencies also in the documentation! Write
-an email to the [mailto:dieter@duenenhof-wilhelm maintainer] or use
+an email to the [mailto:dieter@duenenhof-wilhelm.de maintainer] or use
 Google Code's [http://code.google.com/p/ansys-mode/issues/list issues list].
 
 == Requirements ==
@@ -53,7 +51,7 @@ It is tested with Emacs-24.1, Emacs-24.2 under XP64 and under
 GNU/Linux64 (here also with Emacs-23.2).
 
 Some of ANSYS-Mode's solver control and communication features are
-only implemented for UNIX systems.
+only implemented for Gnu/Linux systems.
 
 == Features ==
 
@@ -71,7 +69,7 @@ only implemented for UNIX systems.
 
 * Solver comunication facilities, i. e. sending code fragments from
   the macro file or commands interactively to an ANSYS solver process
-  (UNIX only).
+  (Gnu/Linux only).
 
 * Keyword completion of ANSYS commands, elements, get- and
   parametric-functions (case-sensitive) of around 2000 ANSYS symbols.
@@ -126,13 +124,13 @@ only implemented for UNIX systems.
 == Example applications ==
 
 Visual examples you will find in the
-[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys-mode_tutorial.html online tutorial]
+[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_introductory_tutorial.html online tutorial]
 and the following screen-shot on [http://www.emacswiki.org/emacs/AnsysMode EmacsWiki]
 
 http://www.duenenhof-wilhelm.de/dieter/ansys-mode.jpg
 
 Above image shows an Emacs frame (in reversed colour mode and compiled
-with the GTK+ toolkit under Linux) with a ripped off menu field.  The
+with the GTK+ toolkit under Gnu/Linux) with a ripped off menu field.  The
 APDL file is in the right window with the (experimental) user variable
 highlighting switched on and a help overlay (in yellow background)
 activated. The smaller windows on the left hand side are showing the
@@ -141,6 +139,62 @@ a certain code template, respectively.
 
 == News ==
 
+* Added a function (C-c C-b or "M-x ansys-browse-ansys-help") showing
+  the detailed ANSYS help in your web-browser for an APDL command or
+  element name (also the element number is sufficient) around the
+  cursor (or if that fails at the line beginning).
+
+  Are you also tired of the ANSYS help browser?  For example try
+  searching for the `F' APDL command, it is impossible!  You have to
+  pick it up from the alphabetical command list. Likewise when you are
+  searching for an incomplete keyword, no hint, no completion,
+  nothing!  Finding and browsing relevant APDL documentation is still
+  cumbersome and too slow
+
+  As a highlight of this release you can now read immeadiately the
+  detailed ANSYS help in your web browser for *all* APDL command AND
+  element names around the cursor (or for the first command in the
+  current line if that fails to be valid keyword).  You may input your
+  search string also interactively, including its completion to ANSYS
+  help keywords and of certain help categories, like `Release Notes'
+  and such. This is an ideal complement to ANSYS-Mode's in-built
+  `command syntax help'
+
+* The function `ansys-start-ansys' is now available under Windows as well
+  and starts the APDL product launcher under this platform.
+
+* When calling `ansys-browse-ansys-help' and
+  `ansys-show-command-parameters' (M-? - the in-built `command syntax
+  help') with a prefix argument for interactively entering a command
+  name, the name is now completable.  And in the non-interactive mode
+  both functions working also for APDL commands which are commented
+  out as well (only for the first command in case of
+  `ansys-show-command-parameters').
+
+* Also the input of `ansys-query-ansys-command' (C-c C-q) is now
+  completable to all current ANSYS commands and with an optional
+  prefix argument the current code line is copied as the initial
+  input.
+
+* Improved the introductory and the in-depth tutorial and extended the
+  documentation with an APDL and syntax highlighting reference in HTML
+  and PDF. (To some degree syntax highlighted in the PDF version as
+  well)
+
+* Values of the `_RETURN' variable are now documented in the function
+  `ansys-skeleton-information'
+
+* `ansys-next-code-line' and `ansys-previous-code-line' (M-n, M-p) are
+  now skipping over node and elements blocks, which are only pure
+  number blocks.  They are now alternatives to
+  `ansys-number-block-start' C-c { and C-c } respectively
+
+* Removed bug in customisation system and dropped 32 bit ANSYS support
+  in line with the ANSYS OS
+  [http://www.ansys.com/Support/Platform+Support strategy] for 2013.
+
+* Described a poor man's round() workaround in ansys-template-function
+  under the nint() entry
 
 Please have a look in the NEWS file for the complete history
 
@@ -170,10 +224,10 @@ Auxiliaries:
 * LICENSE -- The GPL (Gnu Puplic License) Version 3
 * default_el -- Configuration example file of an Emacs 'default.el'
 * fontification.mac -- APDL example file
-* A-M_introductory_tutorial.pdf -- Your first look at ANSYS-Mode?
-* A-M_in-depth_tutorial.pdf -- A hands-on ANSYS-Mode tutorial
-* A-M_in-depth_tutorial.ansys -- Hands-on tutorial's supplementary APDL code
-* A-M_APDL_reference.pdf -- APDL and ANSYS-Mode syntax highlighting reference guide
+* A-M_introductory_tutorial-14.5.1.pdf -- Your first look at ANSYS-Mode?
+* A-M_in-depth_tutorial-14.5.1.pdf -- A hands-on ANSYS-Mode tutorial
+* A-M_in-depth_tutorial-14.5.1.ansys -- Hands-on tutorial's supplementary APDL code
+* A-M_APDL_reference-14.5.1.pdf -- APDL and ANSYS-Mode syntax highlighting reference guide
 
 === Short instructions ===
 
@@ -204,7 +258,7 @@ In case you want to download or have already installed the
 can also download and configure the ANSYS-Mode package
 separately. Please see below.
 
-__For existing Emacs installations on Windows and UNIX:__
+__For existing Emacs installations on Windows and Gnu/Linux:__
 
 ==== Direct way; no file configuration necessary ====
 
@@ -307,6 +361,7 @@ explicitely called ansys-mode.
      (autoload 'ansys-abort-file "ansys-mode" "Activate the function for  aborting ANSYS runs." 'interactive)
      (autoload 'ansys-display-error-file "ansys-mode" "Activate the function for inspecting the ANSYS error file." 'interactive)
      (autoload 'ansys-start-ansys-help "ansys-mode" "Activate the function for starting the ANSYS help browser." 'interactive)
+     (autoload 'ansys-start-ansys "ansys-mode" "Activate the function for starting the APDL interpreter under Gnu/Linux or product launcher under Windows." 'interactive)
      (autoload 'ansys-license-status "ansys-mode" "Activate the function for displaying ANSYS license status or starting a license utility." 'interactive)
 
 * A further configuration method
@@ -369,7 +424,7 @@ Then in mainly reversed cronological order:
 * Eli Zaretzki
 * Markus Triska
 * Mathias Dahl
-* RMS
+* [http://stallman.org/ RMS]
 
 == Resources ==
 
